tests/testdata/run/permission_broker/test1.out
-> broker req   {"v":1,"id":1,"datetime":[WILDCARD],"permission":"read","value":"\"./README.md\""}
<- broker resp  PermissionBrokerResponse { id: 1, result: "allow" }
-> broker req   {"v":1,"id":2,"datetime":[WILDCARD],"permission":"read","value":"\"./README.md\""}
<- broker resp  PermissionBrokerResponse { id: 2, result: "allow" }
-> broker req   {"v":1,"id":3,"datetime":[WILDCARD],"permission":"read","value":"\"./Cargo.toml\""}
<- broker resp  PermissionBrokerResponse { id: 3, result: "allow" }
-> broker req   {"v":1,"id":4,"datetime":[WILDCARD],"permission":"net","value":"\"0.0.0.0:8000\""}
<- broker resp  PermissionBrokerResponse { id: 4, result: "allow" }
Listening on http://0.0.0.0:8000/ (http://localhost:8000/)
-> broker req   {"v":1,"id":5,"datetime":[WILDCARD],"permission":"env","value":null}
<- broker resp  PermissionBrokerResponse { id: 5, result: "deny" }
error: Uncaught (in promise) NotCapable: Requires env access, run again with the --allow-env flag
console.log("env", Deno.env.toObject());
                            ^
    at Object.toObject (ext:deno_os/30_os.js:134:12)
    at [WILDCARD]broker.ts:12:29
